Fixes alignment of top and bottom content.

--- a/website/css/index.css
+++ b/website/css/index.css
@@ -202,12 +202,6 @@ header .logo {
         display: flex;
         flex-direction: column;
     }
-    /*Trying to figure out how to make better margin between the h4 tags*/
-    .main-content .top-content .text-content {
-        display: flex;
-        flex-direction: column;
-        align-items: space-around;
-    }
 }
 
 .main-content .middle-img {
@@ -241,13 +235,6 @@ header .logo {
 footer {
     text-align: center;
     margin: 40px 0 20px;
-}
-
-@media (max-width: 500px) {
-    footer {
-        text-align: center;
-        margin: 40px 0 20px;
-    }
 }
 
 /* Services Styles */
